Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report_Data_This_Week__c/fields/Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>Activity_ID__c</fullName>
    <label>Activity ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>