Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report_Data_This_Week__c/fields/Activity_Name__c.field-meta.xml
<CustomField>
    <fullName>Activity_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Activity_ID__c,Task_Subject__c,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity</label>
    <type>Text</type>
</CustomField>