Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report_Data_This_Week__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Weekly_Report_Data</relationshipName>
    <type>Lookup</type>
</CustomField>