Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report_Data_This_Week__c/fields/Created_User__c.field-meta.xml
<CustomField>
    <fullName>Created_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>This_Week_My_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>