Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report_Data_This_Week__c/fields/Org_Weekly_Report_Data__c.field-meta.xml
<CustomField>
    <fullName>Org_Weekly_Report_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Weekly Report Data This Week</label>
    <referenceTo>Weekly_Report_Data_This_Week__c</referenceTo>
    <relationshipName>Weekly_Report_Data</relationshipName>
    <type>Lookup</type>
</CustomField>