Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report_Data_This_Week__c/fields/Week_Gubun__c.field-meta.xml
<CustomField>
    <fullName>Week_Gubun__c</fullName>
    <label>Week Gubun</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>This Week</fullName>
            </value>
            <value>
                <fullName>Next Week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>