Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report_Data_This_Week__c/fields/Weekly_Report__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Report__c</fullName>
    <label>Weekly Report</label>
    <referenceTo>Weekly_Report__c</referenceTo>
    <relationshipName>Weekly_Report_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>