Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report_Data_This_Week__c/fields/Work_Information__c.field-meta.xml
<CustomField>
    <fullName>Work_Information__c</fullName>
    <label>Work Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>